# ContactsTranslator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/bits/: table_view.h
src/contacts/: Contact.cpp  Contact.h
src/fileio/: CSV.cpp  CSV.h
src/util/: collection.h  datetime.h  hash.h  serial.h  string.cpp  string.h
